--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ input {
   margin-bottom: 5px;
 }
 
+input[type="submit"] {
+  cursor: pointer;
+}
+
 .error {
   color: red;
   margin-bottom: 10px;
